# pixidev-vllm

./: .gitignore  Dockerfile  Dockerfile.rocm  README.md  build_docker.py  clone-repos.py  git-repos.txt  pixi.toml  pyproject.toml  run_docker.sh  run_docker_rocm.sh  run_simple.sh
patches/vllm/: 0001-Add-Python-3.14-as-a-supported-version.patch  0002-Make-mistral-an-optional-package.patch  0003-Allow-numba-as-an-optional-package.patch  0004-Fix-AttributeError-when-config-missing-tie_word_embe.patch  0005-Fix-Qwen2-VL-image-processor-compatibility-with-tran.patch
test/: simple_generate.py
