[project]
name = "vllm-freethreaded-deps"
version = "0.1.0"
requires-python = ">=3.14"

dependencies = [
    # From pixi.toml [dependencies] (pip-installable subset)
    "numpy>=2.3.5,<3",
    "scipy>=1.16.3,<2",
    "pyyaml>=6.0.3,<7",
    "regex>=2025.11.3",
    "blake3>=1.0.8,<2",
    "aiohttp>=3.13.2,<4",
    "psutil>=7.1.3,<8",
    "setproctitle>=1.3.6,<2",
    "pybase64>=1.4.2,<2",
    # Build tools (needed for --no-build-isolation builds)
    "pip>=25.3",
    "setuptools>=80.9.0,<81",
    "setuptools-scm>=9.2.2",
    "maturin>=1.10.2",
    "scikit-build-core>=0.11.6,<0.12",
    "build>=1.3.0",
    "ninja",
    "cmake",
    # From pixi.toml [pypi-dependencies]
    "pillow>=12.0.0,<13",
    "sentencepiece>=0.2.1,<0.3",
    "pyzmq>=27.1.0,<28",
    "watchfiles>=1.1.1,<2",
    "gguf",
    "pydantic",
    "cachetools>=6.2.2,<7",
    "cloudpickle>=3.1.2,<4",
    "msgspec>=0.20.0",
    "py-cpuinfo>=9.0.0,<10",
    "openai>=2.8.1,<3",
    "prometheus-client>=0.23.1,<0.24",
    "fastapi>=0.121.3,<0.122",
    "diskcache>=5.6.3,<6",
    "partial-json-parser>=0.2.1.1.post7,<0.3",
    "cbor2>=5.7.1,<6",
    "anthropic>=0.74.1,<0.75",
    "uvloop>=0.22.1,<0.23",
    "model-hosting-container-standards>=0.1.9,<0.2",
    "prometheus-fastapi-instrumentator>=7.1.0,<8",
    "uvicorn>=0.38.0,<0.39",
    "python-multipart>=0.0.20,<0.0.21",
    "modelscope>=1.32.0,<2",
    "einops>=0.8.1",
    # These used to be built from source but now use PyPI
    "llguidance>=1.4.0",
    "outlines_core>=0.2.14",
    "xgrammar>=0.1.31",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
